# sellershut

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml  sellershut.toml
.sqlx/: query-00d20154cb13f6c15f6b462f2b22824e27deaf923974b2850268e0de0a917178.json  query-13a7218657c107bcaf09965f8d9ec31e8885cd52fb754edf128d6177684aedd2.json  query-161f6f4ce80fe5b9438bf283353d3d5867ce34e7929d1b297fcd118d2222881a.json  query-1c5db3f87a64b5ca5adebab0c46120d2fc43d9bc9daf0dac0eaef2a19e87d770.json  query-28b843ec0c9627d59a885285d86497d01b1512c7c2e6eec478cd8bdea868ec89.json  query-2bf79ba713d1fd3f04f705cd84e02c9c4bebfaa12df2ce323129aae73089365f.json  query-30e1cf84d5e7e61115bbd08f4d6f04ef16877d9ab1279f2cc3233c7649a226a1.json  query-440212a79a4b9887ccfc625493e1558ab8059d7065e39ba1f9885c65ce068148.json  query-458a23501dcc1e023e82c739eb60fe335adaced1f5ebc9230c88dd86efc7abd4.json  query-539062eae253a3555d3de297a7891a982104e3c085145ac0713c49e91e31fa32.json  query-5d15cf491b0347aa74f6f67fa99b660a464cfeda1a346da22f99fc95399b301c.json  query-623f82b4cec559a20c98c7bde45643e1a856b2ad6f94b3f45ad0c6386a9a8598.json  query-638c84c03a1671662af8d475be4a1058126e2c14b2d8cbd73c10f1293e3c26ca.json  query-760ed503e10767feb52a0d1e847031577138d01ba356dfe23aaad483d396a269.json  query-7f376553bc8ba5fa1697d641afa49ed0c347987348f1b548bb75f73723f8cc7b.json  query-86c8b095b1c4a012b4fa477a468ab9a5bae798817f55635bb6c2be380dc542e4.json  (+12 more)
config/: api-categories.toml.example  api-users.toml.example  (+5 more)
crates/api-categories/: Cargo.toml  Dockerfile
crates/api-categories/migrations/: 20241006135645_categories.sql
crates/api-categories/src/: lib.rs  main.rs
crates/api-categories/src/api/: mod.rs
crates/api-categories/src/api/entity/: mod.rs
crates/api-categories/src/api/mutation/: mod.rs
crates/api-categories/src/api/query/: mod.rs
crates/api-categories/src/routes/: mod.rs
crates/api-categories/src/state/: mod.rs
crates/api-categories/src/state/database/: mod.rs  mutation.rs  query.rs
crates/api-users/: Cargo.toml  Dockerfile
crates/api-users/migrations/: 20240922151129_user.sql
crates/api-users/src/: lib.rs  main.rs
crates/api-users/src/entity/: auth.rs  mod.rs
crates/api-users/src/entity/user/: mod.rs
crates/api-users/src/server/: mod.rs
crates/api-users/src/server/grpc/: mod.rs
crates/api-users/src/server/web/: mod.rs
crates/api-users/src/server/web/graphql/: entity.rs  mod.rs  mutation.rs  query.rs
crates/api-users/src/server/web/routes/: health.rs
crates/api-users/src/server/web/routes/auth/: github.rs  mod.rs  session.rs
crates/api-users/src/state/: mod.rs
crates/api-users/src/state/mutations/: mod.rs
crates/api-users/src/state/queries/: mod.rs
crates/auth/: Cargo.toml
crates/auth/src/: discord.rs  http_client.rs  lib.rs
crates/auth/src/error/: client.rs  mod.rs
crates/categories-service/: Cargo.toml
crates/categories-service/migrations/: 20241226085041_category.sql
crates/categories-service/src/: entity.rs  lib.rs  main.rs
crates/categories-service/src/server/: mod.rs
crates/categories-service/src/server/mutation/: mod.rs
crates/categories-service/src/server/query/: mod.rs
crates/infra/: Cargo.toml
crates/infra/src/: events.rs  lib.rs
crates/infra/src/config/: app_metadata.rs  cache.rs  hosts.rs  mod.rs  nats.rs  postgres.rs
crates/infra/src/services/: mod.rs  nats.rs  postgres.rs
crates/infra/src/services/cache/: cluster.rs  key.rs  mod.rs
crates/infra/src/services/utils/: mod.rs  nats_otel.rs
crates/infra/src/tracing/: mod.rs  opentelemetry.rs
crates/sellershut/: Cargo.toml  Dockerfile
crates/sellershut-core/: Cargo.toml  build.rs
crates/sellershut-core/proto/categories/: category.proto
crates/sellershut-core/proto/listings/: listing.proto
crates/sellershut-core/proto/users/: user.proto
crates/sellershut-core/src/: lib.rs  users.rs
crates/sellershut-core/src/google/: mod.rs
crates/sellershut-core/src/google/conversions/: datetime.rs  mod.rs
crates/sellershut-core/src/listings/: mod.rs
crates/sellershut-core/src/users/: mod.rs
crates/sellershut/migrations/: 20241011115503_user.sql
crates/sellershut/src/: lib.rs  logs.rs  main.rs
crates/sellershut/src/activities/: create_listing.rs  mod.rs
crates/sellershut/src/config/: cache.rs  logs.rs  mod.rs  server_config.rs
crates/sellershut/src/config/auth/: mod.rs
crates/sellershut/src/entities/: category.rs  listing.rs  mod.rs  user.rs
crates/sellershut/src/hut/: mod.rs  system_user.rs
crates/sellershut/src/hut/activities/: accept.rs  create_listing.rs  follow.rs  mod.rs
crates/sellershut/src/hut/activities/follow/: follow.rs  mod.rs
crates/sellershut/src/hut/entities/: category.rs  mod.rs
crates/sellershut/src/hut/entities/listing/: mod.rs
crates/sellershut/src/hut/entities/user/: activities.rs  mod.rs
crates/sellershut/src/server/: cache_key.rs  error.rs  mod.rs  router.rs  user.rs  webfinger.rs
crates/sellershut/src/server/middleware/: auth.rs  mod.rs  request_id.rs  trace.rs
crates/sellershut/src/server/nats/: mod.rs
crates/sellershut/src/server/routes/: health.rs  mod.rs  protected.rs
crates/sellershut/src/server/routes/auth/: authorised.rs  csrf.rs  mod.rs  onboard.rs
crates/sellershut/src/server/web/: mod.rs  user.rs  webfinger.rs
crates/sellershut/src/state/: cache.rs  mod.rs  vault.rs
crates/users-service/: Cargo.toml
crates/users-service/migrations/: 20241224135525_user.sql
crates/users-service/src/: entity.rs  lib.rs  main.rs
crates/users-service/src/server/: mod.rs
crates/users-service/src/server/mutation/: mod.rs
crates/users-service/src/server/query/: mod.rs
crates/users-service/src/server/state/: mod.rs
lib/sellershut-core/: Cargo.toml  build.rs
lib/sellershut-core/proto/categories/: category.proto
lib/sellershut-core/proto/listings/: listing.proto
lib/sellershut-core/proto/users/: user.proto
lib/sellershut-core/src/: common.rs  google.rs  lib.rs  listings.rs
lib/svc-infra/: Cargo.toml
lib/svc-infra/src/: config.rs  lib.rs  postgres.rs
lib/svc-infra/src/tracing/: mod.rs  opentelemetry.rs
(+75 files in other folders)
