[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
documentation = "https://github.com/sellershut/sellershut"
homepage = "https://github.com/sellershut/sellershut"
license = "AGPL-3.0-only"

[workspace.dependencies]
bon = "3.9.1"
tokio = "1.52.3"
tracing = "0.1.44"
uuid = "1.23.2"
