[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
documentation = "https://github.com/sellershut/sellershut"
homepage = "https://github.com/sellershut/sellershut"
license = "AGPL-3.0-only"

[workspace.dependencies]
bon = "3.9.1"
secrecy = "0.10.3"
serde = "1.0.228"
sqlx = { version = "0.9.0", default-features = false }
thiserror = "2.0.18"
tokio = "1.52.3"
tracing = "0.1.44"
url = "2.5.8"
uuid = "1.23.2"
