[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
documentation = "https://github.com/sellershut/sellershut"
homepage = "https://github.com/sellershut/sellershut"
license = "AGPL-3.0-only"

[workspace.dependencies]
bon = "3.9.1"
redis = "1.2.3"
reqwest = { version = "0.13.4", default-features = false }
secrecy = "0.10.3"
sellershut-core = { version = "0.0.0", path = "crates/sellershut-core" }
serde = "1.0.228"
sqlx = { version = "0.9.0", default-features = false }
thiserror = "2.0.18"
tokio = "1.52.3"
tracing = "0.1.44"
url = "2.5.8"
uuid = "1.23.2"

# https://github.com/maxcountryman/tower-sessions-stores/pull/91
[patch.crates-io]
tower-sessions-sqlx-store = { git = 'https://github.com/bearbearean/tower-sessions-stores', rev = '4b788d504f56363fce275e20ca4131f639b5d148' }
