[package]
name = "api-users"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
activitypub_federation.workspace = true
anyhow.workspace = true
async-graphql = { workspace = true, features = ["playground", "time", "url"] }
async-graphql-axum.workspace = true
axum = { workspace = true, features = ["http2", "macros"] }
clap = { workspace = true, features = ["derive"] }
config = { workspace = true, features = ["toml"] }
infra = { workspace = true, features = [
    "api",
    "postgres",
    "telemetry",
    "tracing",
] }
sellershut-core = { workspace = true, features = [
    "rpc-server-users",
    "serde",
    "time",
] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = [
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "time",
    "tls-rustls",
] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tonic.workspace = true
tonic-reflection.workspace = true
tower = { workspace = true, features = ["make", "steer", "util"] }
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
url.workspace = true
