[package]
name = "auth"
version = "0.0.0"
edition = "2024"
documentation.workspace = true
homepage.workspace = true
license.workspace = true
publish = false

[dependencies]
oauth2 = "5.0.0"
reqwest = { workspace = true, features = ["json"] }
sellershut-core = { workspace = true, features = ["users"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
