[package]
name = "infra"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
async-nats = { optional = true, workspace = true }
axum = { workspace = true, features = ["http2", "macros"] }
log = "0.4.22"
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "rc"] }
sqlx = { optional = true, workspace = true }
thiserror.workspace = true
tracing = { optional = true, workspace = true }
tracing-subscriber = { optional = true, version = "0.3.18" }

[features]
default = []
api = []
client = []
nats-core = ["dep:async-nats"]
nats-jetstream = ["dep:async-nats"]
users-client = ["client"]
postgres = ["sqlx/postgres"]
telemetry = ["tracing"]
tracing = ["dep:tracing", "tracing-subscriber/env-filter"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
