[package]
name = "infra"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
async-nats = { optional = true, workspace = true }
async-trait = { version = "0.1.81", optional = true }
axum = { workspace = true, features = ["http2", "macros"] }
bb8 = { version = "0.8.5", optional = true }
bb8-redis = { version = "0.16.0", optional = true }
http = { workspace = true, optional = true }
log = "0.4.22"
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { version = "0.25.0", optional = true }
opentelemetry-http = { version = "0.25.0", optional = true }
opentelemetry-otlp = { version = "0.25.0", optional = true }
opentelemetry-semantic-conventions = { version = "0.25.0", optional = true }
redis = { version = "0.26.1", optional = true }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "rc"] }
sqlx = { optional = true, workspace = true }
thiserror.workspace = true
tracing = { optional = true, workspace = true }
tracing-opentelemetry = { optional = true, workspace = true }
tracing-subscriber = { optional = true, version = "0.3.18" }

[features]
default = []
api = []
cache = ["dep:redis", "redis/cluster-async", "redis/connection-manager", "redis/tokio-comp", "dep:bb8", "dep:bb8-redis", "dep:async-trait"]
cache-write = ["cache"]
client = []
nats-core = ["dep:async-nats"]
nats-jetstream = ["dep:async-nats"]
users-client = ["client"]
postgres = ["sqlx/postgres"]
telemetry = [
    "http",
    "dep:opentelemetry",
    "tracing",
    "dep:tracing-opentelemetry",
    "opentelemetry_sdk/rt-tokio",
    "opentelemetry-http",
    "opentelemetry-otlp",
    "opentelemetry-semantic-conventions",
]
tracing = ["dep:tracing", "tracing-subscriber/env-filter"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
