[package]
name = "sellershut-core"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
prost = { optional = true, workspace = true }
serde = { optional = true, workspace = true }
time = { optional = true, workspace = true }
tonic = { optional = true, workspace = true }
tonic-types = { optional = true, version = "0.12.2" }

[features]
default = []
base = ["dep:tonic", "dep:prost"]
users = ["base"]
rpc-server-users = ["users", "dep:tonic-types"]
rpc-client-users = ["users", "dep:tonic-types"]
listings = ["base"]
rpc-server-listings = ["listings", "dep:tonic-types"]
rpc-client-listings = ["listings", "dep:tonic-types"]
serde = ["serde/derive"]
time = ["dep:time"]

[build-dependencies]
tonic-build = { version = "0.12.2", features = ["cleanup-markdown"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
