[package]
name = "sellershut"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
activitypub_federation = { workspace = true, features = ["axum"] }
anyhow.workspace = true
axum = { workspace = true, features = ["macros", "http2"] }
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
config = { workspace = true, features = ["toml"] }
enum_delegate = "0.2.0"
opentelemetry.workspace = true
prost.workspace = true
secrecy.workspace = true
sellershut-core = { workspace = true, features = [
    "rpc-client-categories",
    "rpc-client-users",
    "time",
] }
sellershut-utils.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
svc-infra = { workspace = true, features = ["opentelemetry"] }
time.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic.workspace = true
tower-http = { version = "0.6.2", features = ["request-id", "trace"] }
tracing.workspace = true
tracing-opentelemetry.workspace = true
url.workspace = true
