[package]
name = "sellershut"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
anyhow = "1.0.102"
auth = { path = "../auth/", version = "0.0.0" }
axum = { version = "0.8.9", features = ["tracing"] }
bon.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.150"
sqlx = { workspace = true, features = ["json", "migrate", "postgres", "runtime-tokio", "tls-rustls"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
toml = "1.1.2"
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["cors", "request-id", "timeout", "trace"] }
tracing.workspace = true
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }
utoipa = { version = "5.5.0", features = ["time", "axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", optional = true }
utoipa-redoc = { version = "6.0.0", optional = true }
utoipa-scalar = { version = "0.3.0", optional = true }
utoipa-swagger-ui = { version = "9.0.2", optional = true }
uuid = { workspace = true, features = ["v7"] }
vaultrs = "0.8.0"

[features]
default = ["doc-scalar"]
doc-swagger = ["dep:utoipa-swagger-ui", "utoipa-swagger-ui/axum"]
doc-redoc = ["dep:utoipa-redoc", "utoipa-redoc/axum"]
doc-rapidoc = ["dep:utoipa-rapidoc", "utoipa-rapidoc/axum"]
doc-scalar = ["dep:utoipa-scalar", "utoipa-scalar/axum"]

[dependencies.activitypub_federation]
version = "0.7.0-beta.11"
features = ["axum"]
default-features = false
