[package]
name = "users-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
config = { workspace = true, features = ["toml"] }
prost.workspace = true
sellershut-core = { workspace = true, features = ["rpc-server-users"] }
sqlx = { workspace = true, features = [
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "time",
    "tls-rustls",
] }
svc-infra = { workspace = true, features = ["api", "postgres", "tracing"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic.workspace = true
tracing.workspace = true
