[package]
name = "svc-infra"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bon = "3.3.1"
tracing = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }

[features]
default = []
tracing = ["dep:tracing", "tracing-subscriber/env-filter"]
