[package]
name = "svc-infra"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bon = "3.3.1"
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "rc"] }
sqlx = { optional = true, workspace = true }
thiserror.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }
url = { workspace = true, optional = true }

[features]
default = []
api = []
postgres = ["sqlx/postgres", "url/serde"]
tracing = ["dep:tracing", "tracing-subscriber/env-filter"]
