[package]
name = "svc-infra"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bon = "3.3.1"
http = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { version = "0.27.1", optional = true }
opentelemetry-http = { version = "0.27.0", optional = true }
opentelemetry-otlp = { version = "0.27.0", optional = true }
opentelemetry-semantic-conventions = { version = "0.27.0", optional = true }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
sqlx = { optional = true, workspace = true }
thiserror.workspace = true
tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }
url = { workspace = true, optional = true }

[features]
default = []
api = []
postgres = ["sqlx/postgres", "url/serde"]
tracing = ["dep:tracing", "tracing-subscriber/env-filter"]
opentelemetry = [
    "tracing",
    "tracing-opentelemetry",
    "http",
    "dep:opentelemetry",
    "opentelemetry-http",
    "opentelemetry-otlp",
    "opentelemetry_sdk/rt-tokio",
    "opentelemetry-semantic-conventions/semconv_experimental"
]
